# MoonChildFE

./: .gitignore  AppIcon.icns  CMakeLists.txt  CMakePresets.json  README.md
CMake/Toolchains/: Linux.cmake  Windows.cmake  macOS.cmake
Classes/framewrk/: blitbuf.cpp  fastfile.cpp  fastfile.h  movie.hpp  pcx.hpp  pcxff.cpp  pcxff.hpp  video.cpp  video.hpp
Classes/moonchild/: anim.cpp  anim.hpp  asset.cpp  asset.hpp  hoi.cpp  mc.cpp  mc.hpp
Platform/App/: FrameworkGlue.cpp  Host.cpp  Main.cpp  Resources.cpp  Resources.h
Platform/Backends/Audio/: SDL3Audio.cpp
Platform/Bridges/: MovieBridge.cpp
Scripts/: BuildGameUnix.sh
